Modified set_pass_screen and success_screen and added timer bloc to emplemnt Timer in otp_screen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -9,5 +9,12 @@
   "emailResent": "تم إعادة الإرسال",
   "passwordReset": "إعادة تعيين كلمة المرور",
   "passwordResetMessage": "تم إعادة تعيين كلمة المرور بنجاح. اضغط \"تأكيد\" لإعداد كلمة مرور جديدة",
-  "confirm": "تأكيد"
+  "confirm": "تأكيد",
+  "setNewPassword": "إنشاء كلمة مرور جديدة",
+  "setPasswordMessage": "أنشئ كلمة مرور جديدة. تأكد أن تكون مختلفة عن السابقة لأمان أكثر",
+  "password": "كلمة المرور",
+  "updatePassword": "تحديث كلمة المرور",
+  "resetSuccess": "تم بنجاح",
+  "resetSuccessMessage": "تهانينا! تم تغيير كلمة المرور الخاصة بك. اضغط \"متابعة\" لتسجيل الدخول",
+  "cont": "متابعة"
 }
