--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,5 +9,12 @@
   "emailResent": "Email Resent",
   "passwordReset": "Password Reset",
   "passwordResetMessage": "your password has been successfully reset. Click confirm to set a new password",
-  "confirm": "CONFIRM"
+  "confirm": "Confirm",
+  "setNewPassword": "Set a new password",
+  "setPasswordMessage": "Create a new password. Ensure it differs form the previous ones for security",
+  "password": "Password",
+  "updatePassword": "Update Password",
+  "resetSuccess": "Successful",
+  "resetSuccessMessage": "Congratulations! Your password has been changed. Click continue to login",
+  "cont": "Continue"
 }
