Made modifications on custom button and field. And made code formating

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3,7 +3,7 @@
   "sentMessage1": "We sent a reset link to ",
   "sentMessage2": " enter 6 digit code that mentioned in the email",
   "verificationFailed": "Verification failed. Check the code and try again",
-  "verifyCode": "VERIFY CODE",
+  "verifyCode": "Verify Code",
   "gotEmail": "haven't got the email yet?",
   "resendEmail": "Resend email",
   "emailResent": "Email Resent",
