Added reset password via email address

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -15,6 +15,6 @@
   "password": "كلمة المرور",
   "updatePassword": "تحديث كلمة المرور",
   "resetSuccess": "تم بنجاح",
-  "resetSuccessMessage": "تهانينا! تم تغيير كلمة المرور الخاصة بك. اضغط \"متابعة\" لتسجيل الدخول",
+  "resetSuccessMessage": "تحقق من بريدك الإلكتروني! ارسلنا رابط لإعادة تعيين كلمة المرور. اعد تعيين كلمة المرور لتسجيل الدخول",
   "cont": "متابعة"
 }
