Added Arabic Locaization to Authentication Screens

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,4 +1,39 @@
 {
+  "welcome": "مرحبا في",
+  "welcomeMessage": "مكانك للتعلم والتطوير بخطوات بسيطة و سهلة",
+  "challengeYourFriends": "تحدى أصدقائك!",
+  "challengeYourFriendsMessage": "نافس اصحابك و احتبر معلوماتك و اجعل التعلم اكثر حماسا",
+  "learnWithFun": "تعلم بطريقة ممتعة",
+  "learnWithFunMessage": "استمتع برحلة تعليمية مليئة بالمتعة و التحدي و المنافسة",
+  "skip": "تخطي",
+  "getStarted": "ابدأ الآن",
+
+  "fullName": "الاسم الكامل",
+  "email": "البريد الإلكتروني",
+  "password": "كلمة المرور",
+  "confirm": "تأكيد",
+  "fieldRequired": "هذا الحقل مطلوب",
+  "passwordLength": "يجب أن تكون كلمة المرور 6 أحرف على الأقل",
+  "passwordsNotMatch": "كلمات المرور غير متطابقة",
+  "accept": "أوافق على ",
+  "termsConditions": "الشروط و الأحكام",
+  "signUp": "إنشاء حساب",
+  "or": "أو",
+  "continueWithGoogle": "المتابعة مع جوجل",
+  "alreadyHaveAccount": "هل لديك حساب بالفعل؟ ",
+  "login": "تسجيل الدخول",
+  "failedToSignUp": "فشل في إنشاء الحساب. حاول مرة أخرى.",
+
+  "validEmail": "الرجاء إدخال بريد إلكتروني صالح",
+  "forgotPassword": "هل نسيت كلمة المرور؟",
+  "failedToLogin": "فشل في تسجيل الدخول. حاول مرة أخرى.",
+  "doNotHaveAccount": "ليس لديك حساب؟ ",
+
+  "resetPassword": "إعادة تعيين كلمة المرور",
+  "resetPasswordMessage": "الرجاء إدخال بريدك الإلكتروني لتلقي رابط إعادة تعيين كلمة المرور",
+  "sendResetLink": "إرسال الرابط",
+  "privacyPolicy": "سياسة الخصوصية",
+
   "checkYourEmail": "تحقق من بريدك الإلكتروني",
   "sentMessage1": "أرسلنا رابط إعادة تعيين إلى ",
   "sentMessage2": "، أدخل الرمز المكون من 6 أرقام المذكور في البريد الإلكتروني",
@@ -9,10 +44,8 @@
   "emailResent": "تم إعادة الإرسال",
   "passwordReset": "إعادة تعيين كلمة المرور",
   "passwordResetMessage": "تم إعادة تعيين كلمة المرور بنجاح. اضغط \"تأكيد\" لإعداد كلمة مرور جديدة",
-  "confirm": "تأكيد",
   "setNewPassword": "إنشاء كلمة مرور جديدة",
   "setPasswordMessage": "أنشئ كلمة مرور جديدة. تأكد أن تكون مختلفة عن السابقة لأمان أكثر",
-  "password": "كلمة المرور",
   "updatePassword": "تحديث كلمة المرور",
   "resetSuccess": "تم بنجاح",
   "resetSuccessMessage": "تحقق من بريدك الإلكتروني! ارسلنا رابط لإعادة تعيين كلمة المرور. اعد تعيين كلمة المرور لتسجيل الدخول",
