--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,4 +1,39 @@
 {
+  "welcome": "Welcome to",
+  "welcomeMessage": "Your place to learn and develop in simple and easy steps",
+  "challengeYourFriends": "Challenge Your Friends!",
+  "challengeYourFriendsMessage": "Compete with your friends, test your knowledge, and make learning more exciting",
+  "learnWithFun": "Learn with Fun",
+  "learnWithFunMessage": "Enjoy a different educational journey full of fun, challenge, and Interactions",
+  "skip": "Skip",
+  "getStarted": "Get Started",
+
+  "fullName": "Full Name",
+  "email": "Email",
+  "password": "Password",
+  "confirm": "Confirm",
+  "fieldRequired": "This field is required",
+  "passwordLength": "Password must be at least 6 characters",
+  "passwordsNotMatch": "Passwords do not match",
+  "accept": "I accept ",
+  "termsConditions": "Terms & Conditions",
+  "signUp": "Sign Up",
+  "or": "or",
+  "continueWithGoogle": "Continue with Google",
+  "alreadyHaveAccount": "Already have an account? ",
+  "login": "Login",
+  "failedToSignUp": "Failed to sign up. Please try again.",
+  
+  "validEmail": "Please enter a valid email",
+  "forgotPassword": "Forgot Password?",
+  "failedToLogin": "Failed to login. Please try again.",
+  "doNotHaveAccount": "Don't have an account? ",
+
+  "resetPassword": "Reset Password",
+  "resetPasswordMessage": "please enter your email to receive a password reset link",
+  "sendResetLink": "Send Reset Link",
+  "privacyPolicy": "Privacy Policy",
+
   "checkYourEmail": "Check Your Email",
   "sentMessage1": "We sent a reset link to ",
   "sentMessage2": " enter 6 digit code that mentioned in the email",
@@ -9,10 +44,8 @@
   "emailResent": "Email Resent",
   "passwordReset": "Password Reset",
   "passwordResetMessage": "your password has been successfully reset. Click confirm to set a new password",
-  "confirm": "Confirm",
   "setNewPassword": "Set a new password",
   "setPasswordMessage": "Create a new password. Ensure it differs form the previous ones for security",
-  "password": "Password",
   "updatePassword": "Update Password",
   "resetSuccess": "Successful",
   "resetSuccessMessage": "Check Your Email! We sent a reset link to your email. Reset your password and login",
