Added Full Localization (Arabic & English) Support

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -47,7 +47,111 @@
   "setNewPassword": "إنشاء كلمة مرور جديدة",
   "setPasswordMessage": "أنشئ كلمة مرور جديدة. تأكد أن تكون مختلفة عن السابقة لأمان أكثر",
   "updatePassword": "تحديث كلمة المرور",
+
   "resetSuccess": "تم بنجاح",
   "resetSuccessMessage": "تحقق من بريدك الإلكتروني! ارسلنا رابط لإعادة تعيين كلمة المرور. اعد تعيين كلمة المرور لتسجيل الدخول",
-  "cont": "متابعة"
+  "cont": "متابعة",
+
+  "home": "الرئيسية",
+  "learn": "التعلم",
+  "challenges": "التحديات",
+  "shop": "المتجر",
+  "statsDashboard": "الإحصائيات و لوحة التحكم",
+  "chatWithAI": "الدردشة مع الذكاء الاصطناعي",
+  "profile": "الملف الشخصي",
+  "settings": "الإعدادات",
+  "logout": "تسجيل الخروج",
+
+  "zeroToHero": "من مبتدئ لمحترف",
+  "itemShop": "متجر العناصر",
+  "learnSmarter": "تعلم بذكاء",
+  "chat": "الدردشة",
+  "learnCardContent": "أبدأ التعلم مع مستواك! 📚\nاختر من بين مواضيع متعددة مثل البرمجة، العلوم، والرياضيات لتوسيع معرفتك ومهاراتك.",
+  "challengeCardContent": "ابدأ من الصفر وارتقِ بمهاراتك خطوة بخطوة. أكمل المهام اليومية، واكسب النقاط، وافتح الرتب، وكن بطل رحلتك التعليمية!",
+  "itemShopCardContent": "استكشف وافتح ميزات إضافية تعزز تجربتك! من أدوات التعلم المتقدمة إلى المتجر الحصري والمكافآت، كل ما تحتاجه في متناول يدك لتحقيق أقصى استفادة من التطبيق.",
+  "statsCardContent": "تتبع تقدمك وأدائك في مكان واحد! احصل على رؤى واضحة، شاهد إنجازاتك، وابقَ متحفزًا مع الإحصائيات في الوقت الفعلي ولوحة تحكم تفاعلية.",
+  "chatCardContent": "ناقش دروسك، صحح أخطائك، وتحسن خطوة بخطوة. معلمك الذكي هنا ليرشدك من الصفر إلى القمة!",
+
+  "english": "الإنجليزية",
+  "arabic": "العربية",
+  "programming": "البرمجة",
+  "science": "العلوم",
+  "math": "الرياضيات",
+  "readyToLearn": "هل أنت مستعد لتعلم شيء\nجديد اليوم ؟",
+  "startLearning": "ابدأ التعلم",
+  "comingSoon": "يأتي\nقريباً",
+
+  "myRank": "تصنيفي",
+  "challengesMessage": "استمر في التقدم! كل تحدي يجعلك أقرب إلى القمة",
+  "myStats": "إحصائياتي",
+  "ranked": "مصنف",
+  "unranked": "غير مصنف",
+  "ready": "مستعد!",
+
+  "shopMessage": "استخدم نقاطك لفتح مكافآت وميزات رائعة.",
+  "yourBalance": "رصيدك: ",
+  "coins": "عملات",
+  "common": "شائع",
+  "epic": "ملحمي",
+  "mostawakHeroAvatar": "صورة بطل مستواك",
+  "aHeroicStyle": "تصميم بطولي — حاد، \nمصمم، ومليء بالطاقة",
+  "blackAndWhiteTheme": "المظهر الأسود والأبيض",
+  "aCleanBlackAndWhiteTheme": "مظهر أسود وأبيض نظيف — بسيط، \nأنيق، وخالد",
+  "doubleXP": "مضاعفة النقاط",
+  "doubleXPMessage": "احصل على ضعف النقاط لإكمال المستويات\nلمدة 7 أيام",
+  "tripleXP": "نقاط ثلاثية",
+  "tripleXPMessage": "احصل على 3 أضعاف النقاط لإكمال المستويات\nلمدة 7 أيام",
+  "unlock": "فتح",
+  "applyNow": "تطبيق الآن",
+
+  "achievements": "الإنجازات",
+  "rank": "التصنيف",
+  "progress": "التقدم",
+  "progressOverview": "نظرة على التقدم",
+  "lecture": "المحاضرة",
+  "completed": "المكتملة",
+  "coinsGained": "العملات المكتسبة",
+  "completedTests": "الاختبارات المكتملة",
+  "successRate": "معدل النجاح",
+  "dailyStreak": "السلسلة اليومية",
+  "completedLessons": "الحصص المكتملة",
+  "completedCourses": "الدروس المكتملة",
+  "totalTimeSpent": "إجمالي الوقت المستغرق",
+
+  "hi": "مرحباً!",
+  "chatGreeting": "كيف يمكنني مساعدتك في رحلتك التعليمية اليوم؟",
+  "askSensei": "اسأل المعلم",
+
+  "loading": "جار التحميل...",
+  "user": "مستخدم",
+  "failedToLoadUserData": "فشل في تحميل بيانات المستخدم.",
+  "chooseImage": "اختر مصدر الصورة",
+  "failedToPickImage": "فشل في اختيار الصورة",
+  "points": "النقاط",
+  "profileInfo": "المعلومات الشخصية",
+  "logoutFailed": "فشل في تسجيل الخروج",
+
+  "appPreferences": "تفضيلات التطبيق",
+  "notifications": "الإشعارات",
+  "language": "اللغة",
+  "offlineMode": "الوضع غير المتصل",
+  "accountSettings": "إعدادات الحساب",
+  "changePassword": "تغيير كلمة المرور",
+  "userDetails": "تفاصيل المستخدم",
+  "legalInfo": "القوانين و المعلومات",
+  "appInfo": "معلومات التطبيق",
+  "helpSupport": "المساعدة والدعم",
+
+  "congratulations": "تهانينا",
+  "keepTrying": "استمر في المحاولة",
+  "greatJobMessage": "عمل رائع! لقد أكملت التحدي بنجاح.",
+  "keepTryingMessage": "استمر في المحاولة – الفشل هو مجرد خطوة نحو النجاح",
+  "yourScore": "درجتك",
+  "share": "مشاركة",
+  "tryAgain": "حاول مرة أخرى",
+
+  "englishChallengeRoom": "غرفة تحدي اللغة الإنجليزية",
+  "beginner": "مبتدئ",
+  "intermediate": "متوسط",
+  "advanced": "متقدم"
 }
