--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -23,7 +23,7 @@
   "alreadyHaveAccount": "Already have an account? ",
   "login": "Login",
   "failedToSignUp": "Failed to sign up. Please try again.",
-  
+
   "validEmail": "Please enter a valid email",
   "forgotPassword": "Forgot Password?",
   "failedToLogin": "Failed to login. Please try again.",
@@ -47,7 +47,111 @@
   "setNewPassword": "Set a new password",
   "setPasswordMessage": "Create a new password. Ensure it differs form the previous ones for security",
   "updatePassword": "Update Password",
+
   "resetSuccess": "Successful",
   "resetSuccessMessage": "Check Your Email! We sent a reset link to your email. Reset your password and login",
-  "cont": "Continue"
+  "cont": "Continue",
+
+  "home": "Home",
+  "learn": "Learn",
+  "challenges": "Challenges",
+  "shop": "Shop",
+  "statsDashboard": "Stats & Dashboard",
+  "chatWithAI": "Chat with AI",
+  "profile": "Profile",
+  "settings": "Settings",
+  "logout": "Logout",
+
+  "zeroToHero": "Zero to Hero",
+  "itemShop": "Item Shop",
+  "learnSmarter": "Learn Smarter",
+  "chat": "Chat",
+  "learnCardContent": "Start Learning with Mostawak! 📚\nDiscover interactive lessons and practical exercises that guide you step by step, helping you build skills and stay motivated on your journey",
+  "challengeCardContent": "Start from zero and level up your skills step by step. Complete daily tasks, earn points, unlock ranks, and become the hero of your learning journey!",
+  "itemShopCardContent": "Explore and unlock extra features that enhance your experience! From advanced learning tools to exclusive content and rewards, everything you need is at your fingertips to get the most out of the app.",
+  "statsCardContent": " Track your progress and performance all in one place! Get clear insights, see your achievements, and stay motivated with real-time statistics and an interactive dashboard.",
+  "chatCardContent": "Discuss your lessons, fix your mistakes, and improve step by step. Your AI tutor is here to guide you from Zero to Hero!",
+
+  "english": "English",
+  "arabic": "Arabic",
+  "programming": "Programming",
+  "science": "Science",
+  "math": "Math",
+  "readyToLearn": "Ready to learn something\nnew today?",
+  "startLearning": "Start Learning",
+  "comingSoon": "Coming\nSoon",
+
+  "myRank": "My Rank",
+  "challengesMessage": "Keep pushing forward! Every challenge brings you closer to the top",
+  "myStats": "My Stats",
+  "ranked": "Ranked",
+  "unranked": "Unranked",
+  "ready": "READY!",
+
+  "shopMessage": "Use your points to unlock cool rewards and power-ups.",
+  "yourBalance": "Your Balance",
+  "coins": "coins",
+  "epic": "Epic",
+  "common": "Common",
+  "mostawakHeroAvatar": "Mostawak hero avatar",
+  "aHeroicStyle": "A heroic style — sharp, \ndetermined, and full of energy",
+  "blackAndWhiteTheme": "Black and white theme",
+  "aCleanBlackAndWhiteTheme": "A clean black-and-white theme — minimal, \nelegant, and timeless.",
+  "doubleXP": "Double XP Weekend",
+  "doubleXPMessage": "Get 2x points for completing levels\nfor the next 7 days",
+  "tripleXP": "3x XP Weekend",
+  "tripleXPMessage": "Get 3x points for completing levels \nfor the next 7 days",
+  "unlock": "Unlock",
+  "applyNow": "Apply Now",
+
+  "achievements": "Achievements",
+  "rank": "Rank",
+  "progress": "Progress",
+  "progressOverview": "Progress Overview",
+  "lecture": "Lecture",
+  "completed": "Completed",
+  "coinsGained": "Coins Gained",
+  "completedTests": "Completed Tests",
+  "successRate": "Success Rate",
+  "dailyStreak": "Daily Streak",
+  "completedLessons": "Completed Lessons",
+  "completedCourses": "Completed Courses",
+  "totalTimeSpent": "Total Time Spent",
+
+  "hi": "Hi!",
+  "chatGreeting": "How can I assist you in your learning journey today?",
+  "askSensei": "Ask Sensei",
+
+  "loading": "Loading...",
+  "user": "User",
+  "failedToLoadUserData": "Failed to load user data.",
+  "chooseImage": "Choose Image Source",
+  "failedToPickImage": "Failed to pick image",
+  "points": "Points",
+  "profileInfo": "Profile Info",
+  "logoutFailed": "Logout failed",
+
+  "appPreferences": "App Preferences",
+  "notifications": "Notifications",
+  "language": "Language",
+  "offlineMode": "Offline Mode",
+  "accountSettings": "Account Settings",
+  "changePassword": "Change Password",
+  "userDetails": "User Details",
+  "legalInfo": "Legal & Info",
+  "appInfo": "App Info",
+  "helpSupport": "Help & Support",
+
+  "congratulations": "CONGRATULATIONS",
+  "keepTrying": "KEEP TRYING",
+  "greatJobMessage": "Great Job! You did it!",
+  "keepTryingMessage": "Keep trying – failure is just a step toward success",
+  "yourScore": "Your Score",
+  "share": "Share",
+  "tryAgain": "Try Again",
+
+  "englishChallengeRoom": "English Challenge Room",
+  "beginner": "Beginner",
+  "intermediate": "Intermediate",
+  "advanced": "Advanced"
 }
